# grepl

./: .gitignore  CHANGELOG.md  LICENSE  cabal-repl-channel.sh  cabal.project  grepl.cabal  readme.md  repl.cabal  test-boot.hs
app/: grepl-explore.hs  repl-explore.hs
log/: cabal-repl-bench-stderr.md  cabal-repl-bench-stdout.md  cabal-repl-stderr.md  cabal-repl-stdout.md
src/: Grepl.hs  Repl.hs
src/Grepl/: Watcher.hs
test/: Main.hs
