cabal-version: 3.0
name: grepl
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: (c) 2026
category: language
author: Anonymous
maintainer: tonyday567@gmail.com
synopsis: General REPL - Query tool for GHCi sessions
description:
  File-based message passing protocol for querying GHCi instances.
  Used for agentic type wrangling and interactive code exploration.

build-type: Simple

tested-with:
  ghc ==9.14.1

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: src
  build-depends:
    base >=4.14 && <5,
    process >=1.6 && <1.7,
    async >=2.2 && <2.3
  exposed-modules:
    Grepl

executable grepl-explore
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: app
  main-is: grepl-explore.hs
  build-depends:
    base >=4.14 && <5,
    process >=1.6 && <1.7,
    async >=2.2 && <2.3,
    optparse-applicative >=0.17 && <0.20,
    perf,
    grepl
