cabal-version: 3.0
name: grepl
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: (c) 2026
category: language
author: Tony Day
maintainer: tonyday567@gmail.com
synopsis: General REPL - Query tool for GHCi sessions
description:
  File-based message passing protocol for querying GHCi instances.
  Used for agentic type wrangling and interactive code exploration.

build-type: Simple
extra-doc-files: CHANGELOG.md

tested-with:
  ghc ==9.14.1,
  ghc ==9.12.2,
  ghc ==9.10.1

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: src
  build-depends:
    async >=2.2 && <2.3,
    base >=4.14 && <5,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.5,
    fsnotify >=0.4 && <0.5,
    process >=1.6 && <1.7,
    stm >=2.5 && <2.6,

  exposed-modules:
    Grepl
    Grepl.Watcher

executable grepl-explore
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: app
  main-is: grepl-explore.hs
  build-depends:
    async >=2.2 && <2.3,
    base >=4.14 && <5,
    filepath >=1.4 && <1.5,
    grepl,
    optparse-applicative >=0.17 && <0.20,
    perf,
    process >=1.6 && <1.7,
    stm >=2.5 && <2.6,
    time >=1.9 && <1.10,
